# openai-agent-sdk-tutorial

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run.sh
.github/workflows/: tests.yml
src/openai_agent_sdk_tutorial/: __main__.py  agent.py  app.py  guardrail.py  handoff.py  hook.py  tool.py  util.py
tests/: test_openai_agent_sdk_tutorial.py
